--- a/src/co/edu/udea/mantpriorivias/MantenimientoJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/MantenimientoJDialog.form
@@ -48,12 +48,12 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="codigosViasComboBox" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="viasLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+                  <Component id="codigosViasComboBox" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
+                  <Component id="viasLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
@@ -61,17 +61,11 @@
                                   <Component id="daniosAsociadosLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="daniosComboBox" alignment="0" min="-2" pref="283" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="66" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="mantenimientosRecomendadosLabel" min="-2" max="-2" attributes="0"/>
-                                  <Component id="mantenimientosComboBox" min="-2" pref="156" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace min="-2" pref="389" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                   <Component id="precioMantenimientoMejoraTextField" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="costoUnitarioMantenimientoLabel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="costoUnitarioMantenimientoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -80,17 +74,27 @@
                               </Group>
                               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="cantidadMantenimientoMejoraTextField" min="-2" pref="142" max="-2" attributes="0"/>
-                                  <Component id="cantidadLabel" min="-2" max="-2" attributes="0"/>
+                                  <Component id="cantidadMantenimientosLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="cantidadMantenimientoMejoraTextField" alignment="0" min="-2" pref="142" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="cantidadTratamientosSuperficialesRiegosLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="cantidadTratamientosSuperficialesRiegosTextField" alignment="0" min="-2" pref="142" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="69" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="cantidadEstabilizacionAfirmadosTextField" min="-2" pref="142" max="-2" attributes="0"/>
+                                  <Component id="cantidadEstabilizacionAfirmadosLabel" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
+                      <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="aplicarMantenimientoButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="555" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="514" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -133,25 +137,46 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="385" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="presupuestoActualTextField" min="-2" pref="145" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                              <Component id="presupuestoActualLabel" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="aplicarMantenimientoButton" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="496" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="mantenimientosRecomendadosLabel" min="-2" max="-2" attributes="0"/>
+                                      <Component id="mantenimientosComboBox" min="-2" pref="156" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Component id="presupuestoActualTextField" min="-2" pref="145" max="-2" attributes="0"/>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                                              <Component id="presupuestoActualLabel" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="presupuestoAdicionalTextField" min="-2" pref="145" max="-2" attributes="0"/>
+                                          <Component id="presupuestoAdicionalLabel" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                              <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="tratamientosSuperficialesRiegosLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="tratamientosSuperficialesRiegosComboBox" alignment="0" min="-2" pref="170" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="presupuestoAdicionalTextField" min="-2" pref="145" max="-2" attributes="0"/>
-                          <Component id="presupuestoAdicionalLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="estabilizacionAfirmadosLabel" max="32767" attributes="0"/>
+                          <Component id="estabilizacionAfirmadosComboBox" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="290" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="514" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -218,12 +243,25 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="mantenimientosComboBox" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="tratamientosSuperficialesRiegosLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="estabilizacionAfirmadosLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="tratamientosSuperficialesRiegosComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="estabilizacionAfirmadosComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                       <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="costoUnitarioMantenimientoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="unidadMedidaMantenimientoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="cantidadLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cantidadMantenimientosLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cantidadTratamientosSuperficialesRiegosLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cantidadEstabilizacionAfirmadosLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -237,10 +275,12 @@
                   <Component id="precioMantenimientoMejoraTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="unidadMedidaMantenimientoTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cantidadMantenimientoMejoraTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cantidadTratamientosSuperficialesRiegosTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cantidadEstabilizacionAfirmadosTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="aplicarMantenimientoButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="208" max="-2" attributes="0"/>
               <EmptySpace pref="23" max="32767" attributes="0"/>
           </Group>
@@ -394,7 +434,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cantidadMantenimientoMejoraTextFieldActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="cantidadLabel">
+    <Component class="javax.swing.JLabel" name="cantidadMantenimientosLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cantidad"/>
       </Properties>
@@ -437,5 +477,55 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JComboBox" name="tratamientosSuperficialesRiegosComboBox">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="0"/>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="tratamientosSuperficialesRiegosLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Tratamientos Superficiales o Riegos"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="estabilizacionAfirmadosLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Estabilizaci&#xf3;n de Afirmados"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="estabilizacionAfirmadosComboBox">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="0"/>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="cantidadTratamientosSuperficialesRiegosTextField">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cantidadTratamientosSuperficialesRiegosTextFieldActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="cantidadTratamientosSuperficialesRiegosLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cantidad"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="cantidadEstabilizacionAfirmadosTextField">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cantidadEstabilizacionAfirmadosTextFieldActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="cantidadEstabilizacionAfirmadosLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cantidad"/>
+      </Properties>
+    </Component>
   </SubComponents>
 </Form>
